# main.c

./: README.md
DSA/: CMakeLists.txt
DSA/sapi_sales/headers/binary_search_tree/: user_bst.h
DSA/sapi_sales/headers/hash/: product_hash.h
DSA/sapi_sales/headers/list/: user_list.h
DSA/sapi_sales/headers/manager/: lab10.h  lab12.h  lab2.h  lab3.h  lab5.h  lab8.h  lab9.h  lab_manager.h
DSA/sapi_sales/headers/models/: product.h  product_array.h  user.h  user_array.h
DSA/sapi_sales/headers/queue/: user_queue.h
DSA/sapi_sales/headers/stack/: product_stack.h
DSA/sapi_sales/src/: main.c
DSA/sapi_sales/src/binary_search_tree/: user_bst.c
DSA/sapi_sales/src/hash/: product_hash.c
DSA/sapi_sales/src/list/: user_list.c
DSA/sapi_sales/src/manager/: lab10.c  lab12.c  lab2.c  lab3.c  lab5.c  lab8.c  lab9.c  lab_manager.c
DSA/sapi_sales/src/models/: product.c  product_array.c  user.c  user_array.c
DSA/sapi_sales/src/queue/: user_queue.c
DSA/sapi_sales/src/stack/: product_stack.c
DSA/shared/headers/: errors.h  messages.h  useful.h
DSA/shared/src/: errors.c  messages.c
